ansible/roles/rest_api/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-api
  namespace: webapp
  labels:
    app.kubernetes.io/instance: rest-api
    app.kubernetes.io/name: rest-api
spec:
  ports:
    - name: http
      port: 8004
  selector:
    app.kubernetes.io/instance: rest-api
    app.kubernetes.io/name: rest-api
