ansible/roles/rest_api/templates/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: rest-api-ingress-tls
  namespace: webapp
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`reduce.isis.cclrc.ac.uk`) && PathPrefix(`/api`)
      kind: Rule
      middlewares:
        - name: rest-api-linkerd-middleware
      services:
        - name: rest-api
          port: 8001
  tls:
    secretName: ssl-cert
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: rest-api-linkerd-middleware
  namespace: webapp
spec:
  headers:
    customRequestHeaders:
      l5d-dst-override: "rest-api.webapp.svc.cluster.local:8001"
